Fixed a bug that caused the page to scroll to the bottom whenever Keys was deactivated by deletion. Corrected build and version number for macOS product. Upped the font-size for small icons from 10px to 12px. Made the font more readable on the 96 x 96 extension icon.

--- a/Shared (Extension)/Resources/keys.css
+++ b/Shared (Extension)/Resources/keys.css
@@ -71,7 +71,7 @@ span.Keys-Floating-Key .Keys-Character {
 }
 
 .Keys-Small-Image-Key {
-    font-size: 10px;
+    font-size: 12px;
     z-index: 2147483647 !important;
 }
 
